Erased the email functionality since wasnt working and fixed autolayout

--- a/ClassRosterApp/Base.lproj/Main.storyboard
+++ b/ClassRosterApp/Base.lproj/Main.storyboard
@@ -136,7 +136,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dqe-tu-iv7">
-                                        <rect key="frame" x="0.0" y="252" width="320" height="115"/>
+                                        <rect key="frame" x="0.0" y="252" width="320" height="159"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="czB-2l-B3u">
                                                 <rect key="frame" x="158" y="7" width="92" height="30"/>
@@ -145,13 +145,25 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VZj-wo-R3F">
-                                                <rect key="frame" x="159" y="52" width="91" height="30"/>
+                                                <rect key="frame" x="158" y="52" width="92" height="30"/>
                                                 <color key="backgroundColor" white="0.95340768909999996" alpha="0.59999999999999998" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElV-ls-tcn">
-                                                <rect key="frame" x="218" y="90" width="55" height="30"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-Dn-ouu">
+                                                <rect key="frame" x="70" y="13" width="71" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1BP-cV-bek">
+                                                <rect key="frame" x="70" y="58" width="70" height="17"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ElV-ls-tcn">
+                                                <rect key="frame" x="195" y="90" width="55" height="30"/>
                                                 <state key="normal" title="Update!">
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -159,32 +171,24 @@
                                                     <action selector="updateButtonPressed:" destination="Eyw-Mo-bcS" eventType="touchUpInside" id="GTX-Cg-fcy"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lj6-Dn-ouu">
-                                                <rect key="frame" x="81" y="13" width="71" height="17"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1BP-cV-bek">
-                                                <rect key="frame" x="81" y="51" width="70" height="17"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="VZj-wo-R3F" firstAttribute="top" secondItem="czB-2l-B3u" secondAttribute="bottom" constant="15" id="9BV-q5-KYs"/>
+                                            <constraint firstItem="czB-2l-B3u" firstAttribute="width" secondItem="VZj-wo-R3F" secondAttribute="width" id="Dis-Ar-UWN"/>
                                             <constraint firstItem="lj6-Dn-ouu" firstAttribute="top" relation="greaterThanOrEqual" secondItem="dqe-tu-iv7" secondAttribute="top" constant="13" id="KgK-1H-sjX"/>
                                             <constraint firstAttribute="centerX" secondItem="czB-2l-B3u" secondAttribute="centerX" constant="-44" id="Ny1-Ge-1h1"/>
                                             <constraint firstItem="lj6-Dn-ouu" firstAttribute="top" secondItem="dqe-tu-iv7" secondAttribute="top" constant="13" id="QHT-vD-3IR"/>
-                                            <constraint firstAttribute="centerX" secondItem="lj6-Dn-ouu" secondAttribute="centerX" constant="44" id="W7D-Lz-jNX"/>
+                                            <constraint firstAttribute="centerX" secondItem="lj6-Dn-ouu" secondAttribute="centerX" constant="54.5" id="W7D-Lz-jNX"/>
                                             <constraint firstAttribute="width" constant="320" id="X1H-zI-EHY"/>
+                                            <constraint firstItem="VZj-wo-R3F" firstAttribute="trailing" secondItem="ElV-ls-tcn" secondAttribute="trailing" id="bF1-m3-FU7"/>
                                             <constraint firstAttribute="centerX" secondItem="VZj-wo-R3F" secondAttribute="centerX" constant="-44" id="fin-ks-njG"/>
                                             <constraint firstItem="czB-2l-B3u" firstAttribute="top" secondItem="dqe-tu-iv7" secondAttribute="top" constant="7" id="lIb-i0-w9K"/>
-                                            <constraint firstAttribute="height" constant="115" id="pth-2K-2rg"/>
-                                            <constraint firstItem="1BP-cV-bek" firstAttribute="top" secondItem="lj6-Dn-ouu" secondAttribute="bottom" constant="21" id="qwH-0m-DJh"/>
-                                            <constraint firstAttribute="centerX" secondItem="1BP-cV-bek" secondAttribute="centerX" constant="44" id="tlG-5e-UFq"/>
+                                            <constraint firstAttribute="height" constant="159" id="pth-2K-2rg"/>
+                                            <constraint firstItem="1BP-cV-bek" firstAttribute="top" secondItem="lj6-Dn-ouu" secondAttribute="bottom" constant="28" id="qwH-0m-DJh"/>
+                                            <constraint firstAttribute="centerX" secondItem="1BP-cV-bek" secondAttribute="centerX" constant="55" id="tlG-5e-UFq"/>
+                                            <constraint firstItem="ElV-ls-tcn" firstAttribute="top" secondItem="VZj-wo-R3F" secondAttribute="bottom" constant="8" id="tma-Y2-FRa"/>
+                                            <constraint firstItem="VZj-wo-R3F" firstAttribute="trailing" secondItem="czB-2l-B3u" secondAttribute="trailing" id="yW4-zV-ThW"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8A6-1O-6c1">
@@ -242,7 +246,7 @@
                                     <constraint firstItem="8A6-1O-6c1" firstAttribute="leading" secondItem="CEb-kg-GZJ" secondAttribute="leadingMargin" id="c2s-BJ-Lmv"/>
                                     <constraint firstItem="dqe-tu-iv7" firstAttribute="top" secondItem="Pj3-Hu-7tI" secondAttribute="bottom" constant="29" id="hrC-Uh-JSZ"/>
                                     <constraint firstAttribute="trailing" secondItem="dqe-tu-iv7" secondAttribute="trailing" id="q7W-ah-W9D"/>
-                                    <constraint firstItem="8A6-1O-6c1" firstAttribute="top" secondItem="dqe-tu-iv7" secondAttribute="bottom" constant="185" id="vU6-jX-AJ1"/>
+                                    <constraint firstItem="8A6-1O-6c1" firstAttribute="top" secondItem="dqe-tu-iv7" secondAttribute="bottom" constant="141" id="vU6-jX-AJ1"/>
                                     <constraint firstItem="dqe-tu-iv7" firstAttribute="leading" secondItem="CEb-kg-GZJ" secondAttribute="leading" id="x4n-Xl-Smh"/>
                                 </constraints>
                             </scrollView>
@@ -270,7 +274,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7r0-bN-Oaw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1057" y="362.5"/>
+            <point key="canvasLocation" x="1140" y="348.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8Yx-eU-Tj3">
